# esdoc-cim-v2-schema

./: pyproject.toml
