[tool.poetry]
name = "esdoc-cim-v2-schema"
version = "2.2.0"
description = ""
authors = ["Earth System Documentation (ES-DOC) project <support@es-doc.org>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
